; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_xml.c_escape_xml.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_xml.c_escape_xml.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8* }

@.str = private unnamed_addr constant [6 x i8] c"&amp;\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"&lt;\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"&gt;\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"&#x0d;\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @escape_xml(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_5__, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = call i32 @initStringInfo(%struct.TYPE_5__* %3)
  %6 = load i8*, i8** %2, align 8
  store i8* %6, i8** %4, align 8
  br label %7

7:                                                ; preds = %28, %1
  %8 = load i8*, i8** %4, align 8
  %9 = load i8, i8* %8, align 1
  %10 = icmp ne i8 %9, 0
  br i1 %10, label %11, label %31

11:                                               ; preds = %7
  %12 = load i8*, i8** %4, align 8
  %13 = load i8, i8* %12, align 1
  %14 = sext i8 %13 to i32
  switch i32 %14, label %23 [
    i32 38, label %15
    i32 60, label %17
    i32 62, label %19
    i32 13, label %21
  ]

15:                                               ; preds = %11
  %16 = call i32 @appendStringInfoString(%struct.TYPE_5__* %3, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  br label %27

17:                                               ; preds = %11
  %18 = call i32 @appendStringInfoString(%struct.TYPE_5__* %3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  br label %27

19:                                               ; preds = %11
  %20 = call i32 @appendStringInfoString(%struct.TYPE_5__* %3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  br label %27

21:                                               ; preds = %11
  %22 = call i32 @appendStringInfoString(%struct.TYPE_5__* %3, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  br label %27

23:                                               ; preds = %11
  %24 = load i8*, i8** %4, align 8
  %25 = load i8, i8* %24, align 1
  %26 = call i32 @appendStringInfoCharMacro(%struct.TYPE_5__* %3, i8 signext %25)
  br label %27

27:                                               ; preds = %23, %21, %19, %17, %15
  br label %28

28:                                               ; preds = %27
  %29 = load i8*, i8** %4, align 8
  %30 = getelementptr inbounds i8, i8* %29, i32 1
  store i8* %30, i8** %4, align 8
  br label %7

31:                                               ; preds = %7
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %33 = load i8*, i8** %32, align 8
  ret i8* %33
}

declare dso_local i32 @initStringInfo(%struct.TYPE_5__*) #1

declare dso_local i32 @appendStringInfoString(%struct.TYPE_5__*, i8*) #1

declare dso_local i32 @appendStringInfoCharMacro(%struct.TYPE_5__*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
